FinFamily Release notes

At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172

Release 800 on 21 sep 2010

* Hiski import fixed to lower surety for notices already existing and ignoring existing relations
* Report settings for surety to include added
* Replaced TODO with UNKN (Unknown) that now shows on db-view all persons who have UNKN notices
 

Release 794 on 18 sep 2010

* reset name and place list after use

Reset 792 on 18 sep 2010

* fixed restore of name and placelist
* modified default order of notices
* added place to hiski kastetut import
* fixed problem with excel descendant list

Release 782 on 17 sep 2010

* fixed problem that did now accept dates from person main page

Release 781 on 17 sep 2010

* fixed (fatal) bug for sync between mainperson and notices (NAME and OCCU)

Release 780 on 16 sep 2010

* fixed hiski import issues

Release 775 on 15 sep 2010

* fix to export for suku2004
* spouse numbering when children outside marriage in family improved

Release 772 on 14 sep 2010

* Ancestor report references fixes
* Ancestor report spouses added

Release 770 on 12 sep 2010

* Display village, farm and croft in report

Release 764 on 10 sep 2010

* Added code to restore backup directly from zip-file
* Added parents to subject in descendant report

Release 747 on 7 sep 2010

* Added database view font size to settings
* Added subject to relatives pane
* Added report command to drop down menu in relatives pane
* Fixed some report style issues (Bethrotal, From table text moved after name of subject)

Release 735 on 4 sep 2010

* Bugfixes
  - to text search and
  - Cancel button in runner dialogs
  - Child spouse numbering

Release 714 on 3 sep 2010

* fixed problems in import from Suku2004
* Allowing surnames to begin with lower case letter at update. 
  For new surnames the 1st letter is capitalized

Release 710 on 1 sep 2010
