@@ -2,6 +2,17 @@ FinFamily Release notes
 
 At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172
 
+Release 810 on 25 sep 2010
+
+* Wiki-addresses modified
+* Adjusted report details
+* Reset types list at start of SearchCriteria
+* Ask to overwrite the file at save as
+* Added check before dropping family database (schema)
+* Fixes to needle management
+* Fix to login failure message
+* Gedcom import fixes
+
 Release 800 on 21 sep 2010
 
 * Hiski import fixed to lower surety for notices already existing and ignoring existing relations
